--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=usermgmtMs
-
+server.port=8084
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/demodb
+spring.datasource.url=jdbc:mysql://databaseforboa.ct8oyiumori3.us-east-1.rds.amazonaws.com/bankdb
 #?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root12345
@@ -19,3 +19,4 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+mysql
