--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8082
 spring.datasource.url=jdbc:mysql://databaseforboa.ct8oyiumori3.us-east-1.rds.amazonaws.com/bankdb
 #?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root12345
+spring.datasource.password=root12345al
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate JPA Configuration
