--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=8082
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://databaseforboa.ct8oyiumori3.us-east-1.rds.amazonaws.com/bankdb
 #?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root12345al
+spring.datasource.username=admin
+spring.datasource.password=admin12345al
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate JPA Configuration
